feat(quorum-connector): remove hard dependency on keychain
